<resources>
    <string name="app_name">Booking</string>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_profile">Profile</string>
    <string name="action_settings">Settings</string>

    <string name="hello_world">Hello world!</string>

    <string name="i_agree">I agree to the terms of use</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="age">Age</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="username_already_exists">Username already exists</string>

    <string name="btnAdd">Add new train</string>
    <string name="btnView">View train details</string>
    <string name="tvAdd">Name</string>
    <string name="tvSource">Source</string>
    <string name="tvDest">Destination</string>
    <string name="tvDate">Date</string>
    <string name="tvTime">Time</string>
    <string name="tvPrice">Price</string>
    <string name="etName">Northern Express</string>
    <string name="etSource">Kandy</string>
    <string name="etDest">Jaffna</string>
    <string name="etDate">Saturday</string>
    <string name="etTime">10.25 AM</string>
    <string name="etPrice">Rs100.00</string>
    <string name="btnSubmit">Add</string>
    <string name="tvManage">Manage train details</string>
    <string name="btnUpdate">Update</string>
    <string name="btnDelete">Delete</string>
    <string name="btnBack">View</string>
    <string name="train2">Rajadhani</string>
    <string name="train3">Express B</string>

</resources>
