<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateActivity"
    android:background="@color/colorAccent">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:text="@string/tvAdd"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/etName"
        app:layout_constraintEnd_toStartOf="@+id/etName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvSource"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:text="@string/tvSource"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/etSource"
        app:layout_constraintEnd_toStartOf="@+id/etSource"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvDestination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tvDest"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/etDestination"
        app:layout_constraintEnd_toStartOf="@+id/etDestination"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvDate"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/etDate"
        app:layout_constraintEnd_toStartOf="@+id/etDate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvTime"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/etTime"
        app:layout_constraintEnd_toStartOf="@+id/etTime"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvPrice"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/etPrice"
        app:layout_constraintEnd_toStartOf="@+id/etPrice"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/edit_textview"
        android:drawableLeft="@drawable/train"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/etName"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingLeft="5dp"
        app:layout_constraintBottom_toTopOf="@+id/etSource"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvName"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etSource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/edit_textview"
        android:drawableLeft="@drawable/location"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/etSource"
        android:inputType="textPersonName"
        android:paddingLeft="5dp"
        app:layout_constraintBottom_toTopOf="@+id/etDestination"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvSource"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <EditText
        android:id="@+id/etDestination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_textview"
        android:drawableLeft="@drawable/location"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/etDest"
        android:inputType="textPersonName"
        android:paddingLeft="5dp"
        app:layout_constraintBottom_toTopOf="@+id/etDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvDestination"
        app:layout_constraintTop_toBottomOf="@+id/etSource" />

    <EditText
        android:id="@+id/etTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_textview"
        android:drawableLeft="@drawable/time"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/etTime"
        android:inputType="time"
        android:paddingLeft="5dp"
        app:layout_constraintBottom_toTopOf="@+id/etPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvTime"
        app:layout_constraintTop_toBottomOf="@+id/etDate" />

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_textview"
        android:drawableLeft="@drawable/price"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/etPrice"
        android:inputType="numberDecimal"
        android:paddingLeft="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvPrice"
        app:layout_constraintTop_toBottomOf="@+id/etTime" />

    <EditText
        android:id="@+id/etDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_textview"
        android:drawableLeft="@drawable/planner"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/etDate"
        android:inputType="date"
        android:paddingLeft="5dp"
        app:layout_constraintBottom_toTopOf="@+id/etTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvDate"
        app:layout_constraintTop_toBottomOf="@+id/etDestination" />

    <Button
        android:id="@+id/btnView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/profile_back_button"
        android:text="@string/btnBack"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.897"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPrice" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/profile_back_button"
        android:onClick="displayToastUpdate"
        android:text="@string/btnDelete"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPrice" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/profile_back_button"
        android:onClick="displayToastDelete"
        android:text="@string/btnUpdate"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPrice" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/tvManage"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.636" />

</android.support.constraint.ConstraintLayout>