<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewActivity"
    android:background="@color/colorAccent">

    <SearchView
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnTrain1"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:background="@drawable/edit_textview"
        android:gravity="start"
        android:text="@string/etName"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnTrain2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnTrain2"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_textview"
        android:gravity="start"
        android:text="@string/train2"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnTrain3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTrain1" />

    <Button
        android:id="@+id/btnTrain3"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edit_textview"
        android:gravity="start"
        android:text="@string/train3"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTrain2"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>